--- a/app.json
+++ b/app.json
@@ -2,6 +2,7 @@
   "expo": {
     "name": "expo-vertices",
     "slug": "expo-vertices",
+    "owner": "expo-vertices",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
